--- a/reactstrap-observable/package.json
+++ b/reactstrap-observable/package.json
@@ -3,9 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "babel-core": "^6.26.3",
+    "babel-runtime": "^6.26.0",
+    "bootstrap": "^4.1.3",
+    "jquery": "^3.3.1",
+    "popper": "^1.0.1",
+    "popper.js": "^1.14.4",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-scripts-ts": "2.16.0"
+    "react-redux": "^5.0.7",
+    "react-scripts-ts": "^2.16.0",
+    "reactstrap": "^6.3.1",
+    "redux": "^4.0.0",
+    "redux-observable": "^1.0.0",
+    "rxjs": "^6.2.2"
   },
   "scripts": {
     "start": "react-scripts-ts start",
@@ -19,6 +30,6 @@
     "@types/react": "^16.4.7",
     "@types/react-dom": "^16.0.6",
     "@types/reactstrap": "^6.0.2",
-    "typescript": "^3.0.1"
+    "typescript": "2"
   }
 }
