--- a/reactstrap-observable/package.json
+++ b/reactstrap-observable/package.json
@@ -12,6 +12,8 @@
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-redux": "^5.0.7",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts-ts": "^2.16.0",
     "reactstrap": "^6.3.1",
     "redux": "^4.0.0",
@@ -29,6 +31,8 @@
     "@types/node": "^10.5.6",
     "@types/react": "^16.4.7",
     "@types/react-dom": "^16.0.6",
+    "@types/react-router": "^4.0.30",
+    "@types/react-router-dom": "^4.3.0",
     "@types/reactstrap": "^6.0.2",
     "typescript": "2"
   }
