--- a/reactstrap-observable/package.json
+++ b/reactstrap-observable/package.json
@@ -6,6 +6,7 @@
     "babel-core": "^6.26.3",
     "babel-runtime": "^6.26.0",
     "bootstrap": "^4.1.3",
+    "connected-react-router": "^4.3.0",
     "jquery": "^3.3.1",
     "popper": "^1.0.1",
     "popper.js": "^1.14.4",
@@ -31,6 +32,7 @@
     "@types/node": "^10.5.6",
     "@types/react": "^16.4.7",
     "@types/react-dom": "^16.0.6",
+    "@types/react-redux": "^6.0.6",
     "@types/react-router": "^4.0.30",
     "@types/react-router-dom": "^4.3.0",
     "@types/reactstrap": "^6.0.2",
