--- a/material-mobx/package.json
+++ b/material-mobx/package.json
@@ -5,6 +5,9 @@
   "dependencies": {
     "@material-ui/core": "^3.1.1",
     "@material-ui/icons": "^3.0.1",
+    "mobx": "^5.5.0",
+    "mobx-react": "^5.2.8",
+    "mobx-react-devtools": "^6.0.3",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-router": "^4.3.1",
