--- a/material-mobx/package.json
+++ b/material-mobx/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^3.1.1",
     "@material-ui/icons": "^3.0.1",
+    "graphql-request": "^1.8.2",
     "mobx": "^5.5.0",
     "mobx-react": "^5.2.8",
     "mobx-react-devtools": "^6.0.3",
